moved EnableGemfireFunction* annotations to config package and enhanced ForkUtils to handle spaces in file paths